--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"MY MODS",
-    "subTitle":"Discord:https://discord.gg/5mN27Hvb /nVX:Flipped3699",
+    "subTitle":"Discord:https://discord.gg/5mN27Hvb VX:Flipped3699",
     "avatarUrl":"https://avatars.githubusercontent.com/u/182795691?v=4",
     "GMEEK_VERSION":"last"
 }
